Modify training command in train.yml
Updated training command to include n-estimator and model_output parameters.

--- a/mlops/azureml/train/train.yml
+++ b/mlops/azureml/train/train.yml
@@ -21,7 +21,8 @@ command: >-
   python train.py 
   --train_data ${{inputs.train_data}}
   --test_data ${{inputs.test_data}}
-  --criterion ${{inputs.criterion}}
+  ---model_output ${{outputs.model_output}}
+   --n-estimator ${inputs.n-estimator}}
   --max_depth ${{inputs.max_depth}}
-  --model_output ${{outputs.model_output}}
+ 
 environment: azureml:used-crs-sales-train-env@latest
