Fix YAML syntax for training command

--- a/mlops/azureml/train/train.yml
+++ b/mlops/azureml/train/train.yml
@@ -21,8 +21,8 @@ command: >-
   python train.py 
   --train_data ${{inputs.train_data}}
   --test_data ${{inputs.test_data}}
-  ---model_output ${{outputs.model_output}}
-   --n-estimator ${inputs.n-estimator}}
+  --model_output ${{outputs.model_output}}
+  --n-estimator ${inputs.n-estimator}}
   --max_depth ${{inputs.max_depth}}
  
 environment: azureml:used-crs-sales-train-env@latest
