--- a/mlops/azureml/train/train.yml
+++ b/mlops/azureml/train/train.yml
@@ -22,9 +22,7 @@ command: >-
   --train_data ${{inputs.train_data}}
   --test_data ${{inputs.test_data}}
   --model_output ${{outputs.model_output}}
-  --n-estimators ${inputs.n-estimator}}
+  --n-estimators ${{inputs.n-estimator}}
   --max_depth ${{inputs.max_depth}}
 
-  
- 
 environment: azureml:used-crs-sales-train-env@latest
