--- a/mlops/azureml/train/newpipeline.yml
+++ b/mlops/azureml/train/newpipeline.yml
@@ -48,7 +48,7 @@ jobs:
       model_output:
         type: mlflow_model
     sampling_algorithm: random
-    trial: azureml:train_model@latest  # Refers to a separate command component
+    trial: ./train.yml  # Refers to a separate command component  
     search_space:
       criterion:
         type: choice
