--- a/mlops/azureml/train/train.yml
+++ b/mlops/azureml/train/train.yml
@@ -17,14 +17,14 @@ outputs:
   model_output:
     type: mlflow_model
 code: ../../../data-science/src
-# 👇 Use single quotes and doubled braces to escape GitHub interpolation
 command: >
   python train.py
-  --train_data '${{{{inputs.train_data}}}}'
-  --test_data '${{{{inputs.test_data}}}}'
-  --model_output '${{{{outputs.model_output}}}}'
-  --n_estimators '${{{{inputs.n_estimators}}}}'
-  --max_depth '${{{{inputs.max_depth}}}}'
-  --criterion '${{{{inputs.criterion}}}}'
+  --train_data \$\{{inputs.train_data}}
+  --test_data \$\{{inputs.test_data}}
+  --model_output \$\{{outputs.model_output}}
+  --n_estimators \$\{{inputs.n_estimators}}
+  --max_depth \$\{{inputs.max_depth}}
+  --criterion \$\{{inputs.criterion}}
+
 
 environment: azureml:used-crs-sales-train-env@latest
