--- a/mlops/azureml/train/newpipeline.yml
+++ b/mlops/azureml/train/newpipeline.yml
@@ -58,7 +58,7 @@ jobs:
         values: [1,3,5,10]
     objective:
       goal: maximize
-      primary_metric: Recall
+      primary_metric: r2_score
     limits:
       max_total_trials: 20
       max_concurrent_trials: 10
