--- a/mlops/azureml/train/newpipeline.yml
+++ b/mlops/azureml/train/newpipeline.yml
@@ -48,19 +48,19 @@ jobs:
         type: mlflow_model
     sampling_algorithm: random
     trial: azureml:train_model@latest  # ✅ Use registered train_model component
-    search_space:
-      criterion:
-        type: choice
-        values: ["squared_error", "absolute_error", "friedman_mse"]
-      max_depth:
-        type: choice
-        values: [1, 3, 5, 10]
+   search_space:
       n_estimators:
         type: choice
         values: [100, 200, 300]
+      max_depth:
+        type: choice
+        values: [3, 5, 10]
+      criterion:
+        type: choice
+        values: ["squared_error", "absolute_error", "friedman_mse"]
     objective:
       goal: maximize
-      primary_metric: r2_score   # ✅ regression metric
+      primary_metric: r2  # ✅ regression metric
     limits:
       max_total_trials: 20
       max_concurrent_trials: 10
