--- a/data-science/environment/train-conda.yml
+++ b/data-science/environment/train-conda.yml
@@ -4,7 +4,7 @@ channels:
 dependencies:
   - python=3.8
   - pip=21.2.4
-  - scikit-learn=0.23.2
+  - scikit-learn>=1.2
   - scipy=1.7.1
   - pip:  
     - mlflow==2.8.1
